config/20-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: vinyl-spins-postgres
  namespace: vinyl-spins
spec:
  selector:
    app: vinyl-spins-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vinyl-spins-postgres
  namespace: vinyl-spins
spec:
  serviceName: vinyl-spins-postgres
  replicas: 1
  selector:
    matchLabels:
      app: vinyl-spins-postgres
  template:
    metadata:
      labels:
        app: vinyl-spins-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 20Gi
