config/30-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: vinyl-spins-api
  namespace: vinyl-spins
spec:
  selector:
    app: vinyl-spins-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vinyl-spins-api
  namespace: vinyl-spins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vinyl-spins-api
  template:
    metadata:
      labels:
        app: vinyl-spins-api
    spec:
      containers:
        - name: api
          image: stmcallisterbridge4/vst-api:894a7ef7ba7d700128d0d63f27c572990a3b7c6d
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
