config/50-ingress-ngrok-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vinyl-spins
  namespace: vinyl-spins
  annotations:
    k8s.ngrok.com/traffic-policy: google-oauth
spec:
  ingressClassName: ngrok
  rules:
    - host: vinyl-spins.ngrok.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: vinyl-spins-api
                port:
                  name: http
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: vinyl-spins-api
                port:
                  name: http
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: vinyl-spins-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vinyl-spins-ui
                port:
                  name: http
